@@ -3,17 +3,19 @@
  <head><title>The translation disclaimer</title></head>
  <body>
 
-  <p>For most packages that collaborate with the Translation Project, the
-   translations should be disclaimed in writing by the translators before
-   these translations are accepted for inclusion in the distributions.  There
-   is a form (see below) that translators should fill out and send to the
-   Free Software Foundation.
+  <p>For most packages that make use of the Translation Project, the
+   copyright on the translations should be disclaimed by the translators
+   before these translations are accepted for inclusion in the distributions.
+   There is a form (see below) that translators should fill out and send to
+   the Free Software Foundation (FSF).</p>
 
-  <p>The Free Software Foundation (FSF) acts like a kind of attorney that
-   witnesses the disclaimer.  Some translators mis-read the translation
-   disclaimer as assigning the translations to the FSF, and are disturbed by
-   this impression.  Such an assignment is not the case.  The FSF just acts
-   as a recipient and attorney for your papers, not as an assignee.</p>
+  <p>Some translators misread the translation disclaimer as an assignment
+   of their translations to the FSF.  This is not the case.  The disclaimer
+   merely says that the signer will never make use of the copyright on his
+   or her translations: will never forbid copying them, and will never ask
+   for some kind of compensation.  This guarantees that the FSF (and everyone
+   else) will always be allowed to freely distribute these translations.  The
+   FSF wishes to have this guarantee in writing, to be on the safe side.</p>
 
   <p>A translator usually disclaims all translations he or she could produce
    for any package.  Yet the need for disclaimers is decided on a per package
@@ -43,7 +45,7 @@
    sent by the FSF to the coordinator of the Translation Project, which in
    turn acknowledges the receipt by emailing to both the translator and
    his/her team.  One full month is not an overestimate, and you will be
-   notified when processing of your disclaimer is complete.
+   notified when processing of your disclaimer is complete.</p>
 
   <p>A list of all translators for whom the FSF has received a signed
    disclaimer can be found on the <a href="authors.html">authors page</a>.</p>
